data-jpa-postgresql/deploy/k8s/deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-todo-api
spec:
  selector:
    matchLabels:
      app: springboot-todo-api
  replicas: 2
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4004"
        prometheus.io/scheme: "http"
        prometheus.io/path: "/actuator/prometheus"
      labels:
        app: springboot-todo-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 10
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - springboot-todo-api
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: springboot-todo-api
        image: joergjo.azurecr.io/springboot-samples/data-jpa-postgresql:latest
        # args:
        #   - "--spring.profiles.active=dev"
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 4004
          name: actuator
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: actuator
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: actuator
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 512Mi
      nodeSelector:
        "beta.kubernetes.io/os": linux
      tolerations:
        - key: "kubernetes.azure.com/scalesetpriority"
          operator: "Equal"
          value: "spot"
          effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-todo-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app: springboot-todo-api
