data-jpa-postgresql/deploy/k8s/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-todo-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - springboot-todo.<DOMAIN>
    secretName: springboot-todo-api-ingress-tls
  rules:
    - host: springboot-todo.<DOMAIN>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: springboot-todo-api
              port: 
                name: http
