data-jpa-postgresql/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-todo-api
spec:
  rules:
    - host: springboot-todo.<DOMAIN>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: springboot-todo-api
              port: 
                name: http
